--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,20 @@ dependencies:
   cupertino_icons: ^1.0.2
   dio: ^4.0.4
   flutter_bloc: ^8.0.1
+  retrofit: ^3.0.1+1
+  get_it: ^7.2.0
+  injectable: ^1.5.3
+  freezed: ^1.1.1
+  dartz: ^0.10.1
+  injectable_generator: ^1.5.3
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  retrofit_generator: '>=4.0.0 <5.0.0'
+  build_runner: ^2.1.8
+  json_serializable: '>4.4.0'
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
